# wgmine

./: .gitignore  .gitmodules  Dockerfile  README.md
src/: CMakeLists.txt  config.h  main.c
src/base64-config/lib/: codec_choose.c
src/base64-neon64/lib/: codec_choose.c  config.h
